--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
-!!!
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+doctype 5
+html(lang="en")
+    head
+        title MySite #{title}
+        link(rel='stylesheet', href='/stylesheets/style.css')
+body
+    block mainContent  
