Add socket.io script to layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html(lang="en")
     head
         title MySite #{title}
         link(rel='stylesheet', href='/stylesheets/style.css')
+        script(src='/socket.io/socket.io.js')
 body
     block mainContent  
