--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en")
         link(rel='stylesheet', href='/stylesheets/reset.css')        
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel='icon', type='image/png', href='/images/favicon.png')
+        script(src='http://code.jquery.com/jquery-latest.js')
         script(src='/socket.io/socket.io.js')
 body
   div(id="body-wrapper")
