--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,11 @@
 extends layout
 
 block mainContent
-    h1 This is home
+  div(class="loginForm")
+    h3 #bitb: entering
+    form      
+      div.fieldcomp
+        fieldset
+          input(class="withPlaceholder placeholder", data-placeholder="Your Email", name="email", type="name", value="")
+      div.submitCont      
+          input(type='submit', value='Submit')
