--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,13 @@
 doctype 5
 html(lang="en")
     head
-        title MySite #{title}
+        title #bitb
+        link(rel='stylesheet', href='/stylesheets/reset.css')        
         link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='icon', type='image/png', href='/images/favicon.png')
 body
-    block mainContent  
+  div(id="body-wrapper")
+    div(id="main-content")
+      block mainContent
+    footer
+      p Created by amazing team during #epamhack
