--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block mainContent
   div(class="loginForm")
     h3 #bitb: entering
-    form      
+    form(action='/bitb')
       div.fieldcomp
         fieldset
           input(class="withPlaceholder placeholder", data-placeholder="Your Email", name="email", type="name", value="")
