--- a/views/bitb.jade
+++ b/views/bitb.jade
@@ -8,25 +8,28 @@ block mainContent
       h3 Bit Brothers
       ul#participants
         li(data-id="trnl.me@gmail.com", class="button")
+          div.controls 
           h4 trnl.me@gmail.com
         li(data-id="litvinok@gmail.com", class="button")
           h4 trnl.me@gmail.com        
+          div.controls 
         li(data-id="bas.andrei@gmail.com", class="button")
-          h4 trnl.me@gmail.com        
+          h4 trnl.me@gmail.com       
+          div.controls 
         li(data-id="test.me@gmail.com", class="button")
-          h4 trnl.me@gmail.com        
+          h4 trnl.me@gmail.com       
+          div.controls 
         li(data-id="bymongo@me.com", class="button")
           h4 trnl.me@gmail.com        
+          div.controls
         li(data-id="triangel@tut.by", class="button")                                        
-          h4 trnl.me@gmail.com        
+          h4 trnl.me@gmail.com       
+          div.controls 
     script(src='/javascripts/socket-client.js')
     script(src='/javascripts/jquery.md5.js')    
     script
       $(document).ready(function() {
-         $('.button').each(function(){          
-         var _this = $(this);
-          $(this).prepend("<img src=\""+'http://www.gravatar.com/avatar/' + $.md5(_this.attr('data-id'))+'.jpg'+"\">"+"</img>");
-         });
+         
       });
         
       
