--- a/views/bitb.jade
+++ b/views/bitb.jade
@@ -27,9 +27,6 @@ block mainContent
         li(data-id="triangel@tut.by", class="button")                                        
           h4 trnl.me@gmail.com       
           div.controls 
-    script(src='/javascripts/socket-client.js')
     script(src='/javascripts/jquery.md5.js')    
-    script
-      $(document).ready(function() {
-         
-      });
+    script(src='/javascripts/jquery.timetrack.js')          
+    script(src='/javascripts/socket-client.js')    
