--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -232,11 +232,23 @@ footer {
     height:100px;
     top:0;
     right:0;
-    font-size:8pt;
+    font-size:10pt;
     font-weight:normal;
+    text-transform: none;
     margin:0.5em 1em 0 0;
-    color: #999;
+    color: #aaa;
     text-shadow: 1px 1px 1px #eee;
+}
+
+#time-track h3 img {
+    float: right;
+    border-radius: 100%;
+    right:0;
+    border:1px solid #ccc;
+    border:1px solid rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 #time-track div span {
@@ -247,7 +259,6 @@ footer {
     background:black;
     border-radius:1em;
 }
-
 
 #sounds {
     text-align:center; 
