--- a/views/bitb.jade
+++ b/views/bitb.jade
@@ -3,8 +3,18 @@ extends layout
 block mainContent        
     input#email(type='hidden', name='userid', value=userid)
     div(class="timelineBlock")
-      h3 History
+      h3 The Track
         div#time-track
+        
+    div(class="soundsBlock")
+       h3 Samples
+       ul#sounds
+         - var items = ["001", "002", "003","004", "005", "006", "007", "008", "009", "010","011","012","013","014","015", "016"]
+           each item in items
+             li(data-id=item, class="sample")
+               img(src='/images/sample.png')
+               div.controls 
+               h4= '#'+item
 
     div(class="buttonsBlock")
       h3 Bit Brothers
